input board spacing fix

--- a/board/control.css
+++ b/board/control.css
@@ -10,7 +10,7 @@
 .scoreValues {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 .eachPlayer {
